PL-960, PL-953 Query Editor fixes
Summary:
- width-long queries were causing the content box to grow larger than the window, so the execute button would disappear
- set a min-height on the code-editor box, because height-long queries made the editor box too long

Test Plan: tried it, looked at it

Reviewers: zasgar, #engineering

Reviewed By: zasgar, #engineering

Differential Revision: https://phab.corp.pixielabs.ai/D2066

GitOrigin-RevId: 3998884cc2fa16f3a302de6cdb48cbbb08c979e5

--- a/src/ui/src/containers/vizier/vizier.scss
+++ b/src/ui/src/containers/vizier/vizier.scss
@@ -28,6 +28,7 @@
     margin-top: 25px;
     display: flex;
     flex: 1;
+    min-height: 0;
 }
 
 .hotkey-container {
@@ -45,6 +46,10 @@
 
 .query-executor .code-editor .CodeMirror-linenumber {
     color: $white;
+}
+
+.query-executor .ReactCodeMirror {
+    display: grid;
 }
 
 .query-results .ReactVirtualized__Table__row {
